feat: criei um autocomplete de emails do meu sistema, que faz uma requisicao GET para o banco e ele retorna uma lista de email que podem ser concluidos ao digitar

--- a/pages/style.css
+++ b/pages/style.css
@@ -55,6 +55,25 @@ button:hover {
     text-align: center;
 }
 
+#suggestions {
+    border: 1px solid #ccc;
+    max-height: 150px;
+    overflow-y: auto;
+    position: absolute;
+    background: white;
+    width: 300px;
+    z-index: 10;
+  }
+
+  .suggestion-item {
+    padding: 8px;
+    cursor: pointer;
+  }
+
+  .suggestion-item:hover {
+    background-color: #f0f0f0;
+  }
+
 
 
 
